# sample-agentic-ai-with-claude-agent-sdk-and-amazon-bedrock-agentcore

./: .dockerignore  .env.observability  .gitignore  CLAUDE.md  README  README.md  main.py  main_observable.py  pyproject.toml  requirements.txt
agent/: agent_agentcore.py  agent_agentcore_observable.py  basic_agent.py  skills_agent.py  skills_agent_observable.py
data/demo_data/: course_performance_analytics.csv  department_summary_metrics.csv  financial_summary_by_student.csv  instructor_performance_summary.csv  scholarship_recipient_analysis.csv  student_activity_engagement.csv
data/metadata/: attendance_behavior_analytics.yaml  attendance_behavior_analytics_sample_data.csv  course_performance_analytics.yaml  course_performance_analytics_sample_data.csv  department_summary_metrics.yaml  department_summary_metrics_sample_data.csv  financial_summary_by_student.yaml  financial_summary_by_student_sample_data.csv  instructor_performance_summary.yaml  instructor_performance_summary_sample_data.csv  library_usage_patterns.yaml  library_usage_patterns_sample_data.csv  scholarship_recipient_analysis.yaml  scholarship_recipient_analysis_sample_data.csv  student_academic_performance.yaml  (+5 more)
module-0-setup/: 0-environment-setup.ipynb
module-1-local-agent/: 1a-basic-agent-no-skills.ipynb  1b-agent-with-skills.ipynb
module-2-agentcore-deployment/: 2-deploy-to-agentcore.ipynb
module-3-observability/: 3a-local-observability.ipynb  3b-agentcore-deployment-observability.ipynb
scripts/: generate_denormalized_data.py  setup_athena.py
tools/: athena_tools.py
(+3 files in other folders)
